# algame

./: .gitignore  CMakeLists.txt
level/: demolevel.json
src/: game.cpp  game.hpp  main.cpp
src/core/: algame.cpp  algame.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  joystick.cpp  joystick.hpp  key.cpp  key.hpp  texture.cpp  texture.hpp  texturemanager.cpp  texturemanager.hpp  vector2.cpp  vector2.hpp
src/game/: animation.hpp  camera.cpp  camera.hpp  gameobject.cpp  gameobject.hpp  gui.cpp  gui.hpp  level.cpp  level.hpp  maploader.cpp  maploader.hpp  objectfactory.hpp  player.cpp  player.hpp  tilemap.cpp  tilemap.hpp
